--- a/web_backend/src/web_backend.Blazor/App.razor
+++ b/web_backend/src/web_backend.Blazor/App.razor
@@ -12,6 +12,9 @@
     <link href="main.css" rel="stylesheet"/>
     <!--/ABP:Styles-->
     <link href="web_backend.Blazor.Client.styles.css" rel="stylesheet"/>
+    <!--Custom VSS Styles-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="css\vss.css" rel="stylesheet" />
 
 
     <HeadOutlet @rendermode="new InteractiveWebAssemblyRenderMode(prerender: false)" />
