--- a/web_backend/src/web_backend.Blazor.Client/MainLayout.razor
+++ b/web_backend/src/web_backend.Blazor.Client/MainLayout.razor
@@ -2,7 +2,7 @@
 @using Volo.Abp.MultiTenancy
 @inject AuthenticationStateProvider AuthenticationStateProvider
 
-<div class="vss-container">
+<div class="vss-page">
     <header class="vss-header navbar navbar-expand-lg">
         <!-- Company Logo -->
         <a class="vss-header__logo navbar-brand" href="/">
@@ -18,31 +18,64 @@
         <nav class="collapse navbar-collapse vss-header" id="vssNavbar">
             <ul class="vss-nav navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="vss-nav__item nav-item">
-                    <a class="vss-nav__link nav-link" href="/">Home</a>
+                    <a class="vss-nav__link nav-link" href="/">
+                        Home
+                        <svg>
+                            <rect x="0" y="0" width="100%" height="100%"></rect>
+                        </svg>
+                    </a>
                 </li>
 
                 <li class="vss-nav__item nav-item dropdown">
                     <a class="vss-nav__link nav-link dropdown-toggle" href="#" id="sportsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Sports
+                        <svg>
+                            <rect x="0" y="0" width="100%" height="100%"></rect>
+                        </svg>
                     </a>
                     <ul class="vss-dropdown dropdown-menu" aria-labelledby="sportsDropdown">
                         <li class="vss-dropdown__item">
-                            <a class="vss-dropdown__link dropdown-item" href="/sports/football">Football</a>
+                            <a class="vss-dropdown__link dropdown-item" href="/sports/football">
+                                Football
+                                <svg>
+                                    <rect x="0" y="0" width="100%" height="100%"></rect>
+                                </svg>
+                            </a>
                         </li>
                         <li class="vss-dropdown__item">
-                            <a class="vss-dropdown__link dropdown-item" href="/sports/basketball">Basketball</a>
+                            <a class="vss-dropdown__link dropdown-item" href="/sports/basketball">
+                                Basketball
+                                <svg>
+                                    <rect x="0" y="0" width="100%" height="100%"></rect>
+                                </svg>
+                            </a>
                         </li>
                         <li class="vss-dropdown__item">
-                            <a class="vss-dropdown__link dropdown-item" href="/sports/baseball">Baseball</a>
+                            <a class="vss-dropdown__link dropdown-item" href="/sports/baseball">
+                                Baseball
+                                <svg>
+                                    <rect x="0" y="0" width="100%" height="100%"></rect>
+                                </svg>
+                            </a>
                         </li>
                     </ul>
                 </li>
 
                 <li class="vss-nav__item nav-item">
-                    <a class="vss-nav__link nav-link" href="/schedule">Sport Schedules</a>
+                    <a class="vss-nav__link nav-link" href="/schedule">
+                        Sport Schedules
+                        <svg>
+                            <rect x="0" y="0" width="100%" height="100%"></rect>
+                        </svg>
+                    </a>
                 </li>
                 <li class="vss-nav__item nav-item">
-                    <a class="vss-nav__link nav-link" href="/contact">Contact Us</a>
+                    <a class="vss-nav__link nav-link" href="/contact">
+                        Contact Us
+                        <svg>
+                            <rect x="0" y="0" width="100%" height="100%"></rect>
+                        </svg>
+                    </a>
                 </li>
             </ul>
 
@@ -54,19 +87,25 @@
                 }
                 else
                 {
-                    <a class="vss-auth__button btn btn-secondary me-3" href="/Account/Login">Login</a>
-                    <a class="vss-auth__button btn btn-primary" href="/Account/Register">Register</a>
+                    <a class="vss-auth__button btn me-3" href="/Account/Login">
+                        Login
+                        <svg>
+                            <rect x="0" y="0" width="100%" height="100%"></rect>
+                        </svg>
+                    </a>
+                    <a class="vss-auth__button btn" href="/Account/Register">
+                        Register
+                        <svg>
+                            <rect x="0" y="0" width="100%" height="100%"></rect>
+                        </svg>
+                    </a>
                 }
             </div>
         </nav>
     </header>
 
     <!-- Main Content Area -->
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-12 col-md-10 col-lg-8">
-                @Body
-            </div>
-        </div>
-    </div>
+    <main class="vss-main">
+        @Body
+    </main>
 </div>
