--- a/web_backend/src/web_backend.Blazor.Client/Pages/Components/LiveStream.razor
+++ b/web_backend/src/web_backend.Blazor.Client/Pages/Components/LiveStream.razor
@@ -1,6 +1,6 @@
 ﻿@page "/livestream/{id:int}"
 @inherits LiveStreamBase
-
+@attribute [Authorize]
 
 <div class="vss-page">
     <header class="vss-header">
