--- a/web_backend/src/web_backend.Blazor.Client/Pages/Components/LiveStreamLanding.razor
+++ b/web_backend/src/web_backend.Blazor.Client/Pages/Components/LiveStreamLanding.razor
@@ -1,5 +1,6 @@
 ﻿@page "/livestream/landing"
 @inherits LiveStreamLandingBase
+@attribute [Authorize]
 
 <div class="vss-page">
     <header class="vss-header">
