--- a/web_backend/src/web_backend.Blazor.Client/MainLayout.razor
+++ b/web_backend/src/web_backend.Blazor.Client/MainLayout.razor
@@ -87,7 +87,7 @@
                 }
                 else
                 {
-                    <a class="vss-auth__button btn me-3" href="/Account/Login">
+                    <a class="vss-auth__button btn me-3" href="/authentication/Login">
                         Login
                         <svg>
                             <rect x="0" y="0" width="100%" height="100%"></rect>
