--- a/web_backend/src/web_backend.Blazor.Client/MainLayout.razor
+++ b/web_backend/src/web_backend.Blazor.Client/MainLayout.razor
@@ -1,6 +1,10 @@
 ﻿@inherits LayoutComponentBase
 @using Microsoft.AspNetCore.Components.Authorization
+@using web_backend.Livestreams
 @inject AuthenticationStateProvider AuthenticationStateProvider
+@inject NavigationManager NavigationManager
+@inject ILivestreamAppService LivestreamService
+@using web_backend.Enums;
 
 <div class="vss-page">
     <header class="vss-header navbar navbar-expand-lg">
@@ -24,6 +28,27 @@
                             <rect x="0" y="0" width="100%" height="100%"></rect>
                         </svg>
                     </a>
+                </li>
+
+                <li class="vss-nav__item nav-item">
+                    @if (activeLivestream != null)
+                    {
+                        <a class="vss-nav__link nav-link" href="@($"/livestream/{activeLivestream.Id}")">
+                            Livestreams
+                            <svg>
+                                <rect x="0" y="0" width="100%" height="100%"></rect>
+                            </svg>
+                        </a>
+                    }
+                    else
+                    {
+                        <a class="vss-nav__link nav-link disabled" href="#">
+                            Livestreams
+                            <svg>
+                                <rect x="0" y="0" width="100%" height="100%"></rect>
+                            </svg>
+                        </a>
+                    }
                 </li>
 
                 <li class="vss-nav__item nav-item dropdown">
@@ -80,7 +105,11 @@
             </ul>
 
             <div class="vss-auth d-flex">
-                @if (authState.User.Identity?.IsAuthenticated ?? false)
+                @if (authState == null)
+                {
+                    <span class="vss-auth__username navbar-text me-3">Loading...</span>
+                }
+                else if (authState.User.Identity?.IsAuthenticated ?? false)
                 {
                     <span class="vss-auth__username navbar-text me-3">Hello, @authState.User.Identity.Name</span>
                     <a class="vss-auth__link nav-link" href="/Account/Logout">Logout</a>
@@ -112,9 +141,15 @@
 
 @code {
     private AuthenticationState authState;
+    private LivestreamDto activeLivestream;
 
     protected override async Task OnInitializedAsync()
     {
         authState = await AuthenticationStateProvider.GetAuthenticationStateAsync();
+
+        // Retrieve the list of livestreams and select the one with a Live status.
+        var livestreams = await LivestreamService.GetListAsync();
+        activeLivestream = livestreams.FirstOrDefault(l => l.StreamStatus == StreamStatus.Live);
+
     }
 }
