--- a/web_backend/src/web_backend.Blazor.Client/MainLayout.razor
+++ b/web_backend/src/web_backend.Blazor.Client/MainLayout.razor
@@ -6,6 +6,12 @@
 @inject ILivestreamAppService LivestreamService
 @using web_backend.Enums;
 
+<HeadContent>
+    <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+    <script src="js/hlsPlayer.js"></script>
+</HeadContent>
+
+
 <div class="vss-page">
     <header class="vss-header navbar navbar-expand-lg">
         <!-- Logo -->
@@ -24,9 +30,7 @@
                 <li class="vss-nav__item nav-item">
                     <a class="vss-nav__link nav-link" href="/">
                         Home
-                        <svg>
-                            <rect x="0" y="0" width="100%" height="100%"></rect>
-                        </svg>
+                        <svg><rect x="0" y="0" width="100%" height="100%"></rect></svg>
                     </a>
                 </li>
 
@@ -35,73 +39,57 @@
                     {
                         <a class="vss-nav__link nav-link" href="@($"/livestream/{activeLivestream.Id}")">
                             Livestreams
-                            <svg>
-                                <rect x="0" y="0" width="100%" height="100%"></rect>
-                            </svg>
+                            <svg><rect x="0" y="0" width="100%" height="100%"></rect></svg>
                         </a>
                     }
                     else
                     {
                         <a class="vss-nav__link nav-link disabled" href="#">
                             Livestreams
-                            <svg>
-                                <rect x="0" y="0" width="100%" height="100%"></rect>
-                            </svg>
+                            <svg><rect x="0" y="0" width="100%" height="100%"></rect></svg>
                         </a>
                     }
-                </li>
-
-                <li class="vss-nav__item nav-item dropdown">
-                    <a class="vss-nav__link nav-link dropdown-toggle" href="#" id="sportsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Sports
-                        <svg>
-                            <rect x="0" y="0" width="100%" height="100%"></rect>
-                        </svg>
-                    </a>
-                    <ul class="vss-dropdown dropdown-menu" aria-labelledby="sportsDropdown">
-                        <li class="vss-dropdown__item">
-                            <a class="vss-dropdown__link dropdown-item" href="/sports/football">
-                                Football
-                                <svg>
-                                    <rect x="0" y="0" width="100%" height="100%"></rect>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="vss-dropdown__item">
-                            <a class="vss-dropdown__link dropdown-item" href="/sports/basketball">
-                                Basketball
-                                <svg>
-                                    <rect x="0" y="0" width="100%" height="100%"></rect>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="vss-dropdown__item">
-                            <a class="vss-dropdown__link dropdown-item" href="/sports/baseball">
-                                Baseball
-                                <svg>
-                                    <rect x="0" y="0" width="100%" height="100%"></rect>
-                                </svg>
-                            </a>
-                        </li>
-                    </ul>
                 </li>
 
                 <li class="vss-nav__item nav-item">
                     <a class="vss-nav__link nav-link" href="/schedule">
                         Sport Schedules
-                        <svg>
-                            <rect x="0" y="0" width="100%" height="100%"></rect>
-                        </svg>
+                        <svg><rect x="0" y="0" width="100%" height="100%"></rect></svg>
                     </a>
                 </li>
                 <li class="vss-nav__item nav-item">
                     <a class="vss-nav__link nav-link" href="/contact">
                         Contact Us
-                        <svg>
-                            <rect x="0" y="0" width="100%" height="100%"></rect>
-                        </svg>
+                        <svg><rect x="0" y="0" width="100%" height="100%"></rect></svg>
                     </a>
                 </li>
+
+                @if (authState != null && authState.User.IsInRole("admin"))
+                {
+                    <li class="vss-nav__item nav-item dropdown">
+                        <a class="vss-nav__link nav-link dropdown-toggle" href="#" id="adminDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Admin
+                            <svg><rect x="0" y="0" width="100%" height="100%"></rect></svg>
+                        </a>
+                        <ul class="vss-dropdown dropdown-menu" aria-labelledby="adminDropdown">
+                            <li class="vss-dropdown__item">
+                                <a class="vss-dropdown__link dropdown-item" href="/admin/teams">
+                                    Manage Teams
+                                </a>
+                            </li>
+                            <li class="vss-dropdown__item">
+                                <a class="vss-dropdown__link dropdown-item" href="/admin/gametimes">
+                                    Edit Schedule
+                                </a>
+                            </li>
+                            <li class="vss-dropdown__item">
+                                <a class="vss-dropdown__link dropdown-item" href="/admin/scores">
+                                    Update Scores
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                }
             </ul>
 
             <div class="vss-auth d-flex">
@@ -118,15 +106,11 @@
                 {
                     <a class="vss-auth__button btn me-3" href="/authentication/Login">
                         Login
-                        <svg>
-                            <rect x="0" y="0" width="100%" height="100%"></rect>
-                        </svg>
+                        <svg><rect x="0" y="0" width="100%" height="100%"></rect></svg>
                     </a>
                     <a class="vss-auth__button btn" href="/Account/Register">
                         Register
-                        <svg>
-                            <rect x="0" y="0" width="100%" height="100%"></rect>
-                        </svg>
+                        <svg><rect x="0" y="0" width="100%" height="100%"></rect></svg>
                     </a>
                 }
             </div>
@@ -147,9 +131,7 @@
     {
         authState = await AuthenticationStateProvider.GetAuthenticationStateAsync();
 
-        // Retrieve the list of livestreams and select the one with a Live status.
         var livestreams = await LivestreamService.GetListAsync();
         activeLivestream = livestreams.FirstOrDefault(l => l.StreamStatus == StreamStatus.Live);
-
     }
 }
