--- a/web_backend/src/web_backend.Blazor/_Imports.razor
+++ b/web_backend/src/web_backend.Blazor/_Imports.razor
@@ -7,3 +7,14 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using web_backend.Blazor.Client
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Components.WebAssembly.Http
+@using Volo.Abp.AspNetCore.Components.Web
+@using web_backend.Blazor
+@using Blazorise
+@using Blazorise.DataGrid
+@using Volo.Abp.BlazoriseUI
+@using Volo.Abp.BlazoriseUI.Components
+@using web_backend.Domain.Shared.Dtos
+@using web_backend.HttpApi.Services
